--- a/src/componenets/Navigation/SideDrawer/SideDrawer.module.css
+++ b/src/componenets/Navigation/SideDrawer/SideDrawer.module.css
@@ -9,7 +9,7 @@
     background-color: white;
     padding: 32px 16px;
     box-sizing: border-box;
-    transition: transform 0.3 ease-out
+    transition: transform 0.6s ease-out
 }
 
 @media(min-width: 500px)
@@ -32,12 +32,6 @@
     margin-bottom: 32px;
 }
 
-@media(max-width:500px)
-{
-    .DesktopOnly
-    {
-        display: none
-    }
-}
+
 
 /* These two open and close will run conditionally. */
